# simple-index-db

./: .gitignore  README.md  pixi.toml  pyproject.toml
src/simple_index_db/: conda.py  db.py  main.py  pypi_client.py
