[project]
authors = [{name = "Klaus Zimmermann", email = "klaus.zimmermann@quansight.com"}]
dependencies = [
    "sqlalchemy>=2.0.15",
]
name = "simple-index-db"
requires-python = ">= 3.11"
dynamic = ["version"]

[project.scripts]
simple-index-db = "simple_index_db.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
msgspec = "*"
requests = "*"
sqlalchemy = "*"
typer = "*"
ipython = ">=9.6.0,<10"
pyqt = ">=5.15.11,<6"
matplotlib = ">=3.10.7,<4"
types-requests = ">=2.32.4.20250913,<3"
packaging = ">=25.0,<26"
scalene = ">=1.5.51,<2"
py-spy = ">=0.4.1,<0.5"
hatch = ">=1.16.2,<2"

[tool.pixi.pypi-dependencies]
simple_index_db = { path = ".", editable = true }

[tool.pixi.tasks]
