[project]
authors = [{name = "Klaus Zimmermann", email = "klaus.zimmermann@quansight.com"}]
dependencies = [
    "sqlalchemy>=2.0.15",
]
name = "simple-index-db"
requires-python = ">= 3.11"
dynamic = ["version"]

[project.scripts]
simple-index-db = "simple_index_db.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64","win-64"]

[tool.pixi.dependencies]
requests = "*"
sqlalchemy = "*"
typer = "*"
types-requests = ">=2.32.4.20250913,<3"
packaging = ">=25.0,<26"

[tool.pixi.pypi-dependencies]
simple_index_db = { path = ".", editable = true }

[tool.pixi.tasks]
update-db = "simple-index-db update-db"
show-free-threaded = "simple-index-db show-free-threaded"
