[project]
authors = [{name = "Klaus Zimmermann", email = "klaus.zimmermann@quansight.com"}]
dependencies = [
    "requests",
    "sqlalchemy>=2.0.15",
    "typer",
    "types-requests>=2.32.4.20250913,<3",
    "packaging>=25.0,<26",
]
name = "simple-index-db"
requires-python = ">= 3.11"
dynamic = ["version"]

[project.scripts]
simple-index-db = "simple_index_db.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"
